--- a/css/style1.css
+++ b/css/style1.css
@@ -354,6 +354,10 @@ address{
     display: flex;
     flex-direction: column;
   }
+  .fourcut{
+    width: 100%;
+    max-width: 1199px;
+  }
   .main{
     width: 100%;
     max-width: 1199px;
@@ -454,12 +458,21 @@ address{
   max-width: 1200px;
   height: 500px;
 }
+.footer{
+  width: 100%;
+  max-width: 1199px;
+}
+
 }
 @media screen and (max-width:767px) {
 
   .wrapBox{
     display: flex;
     flex-direction: column;
+  }
+  .fourcut{
+    width: 100%;
+    max-width: 767px;
   }
   #pcheader{display: none;}
   #moheader{
@@ -627,7 +640,10 @@ address{
   max-width: 767px;
   height: 500px;
 }
-
+.footer{
+  width: 100%;
+  max-width: 1199px;
+}
 
 }
 
