--- a/css/style1.css
+++ b/css/style1.css
@@ -17,6 +17,13 @@
 }
 @import url('https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap');
 
+@font-face {
+  font-family: 'SUITE-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/SUITE-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
+
 
 
 #wrap{
@@ -305,26 +312,164 @@ h2 span:nth-child(8) { animation-delay: .7s; }
   padding: 10px;
 }
 .content1 ul:first-of-type{
-  background: darkorange;
+  background: linear-gradient(to right, orange, rgb(255, 111, 55));
+  display: flex;
+  border-radius: 50% 10px 10px 50%;
+  transition: 0.35s;
 }
-.content1 ul li h3{
-  margin-bottom: 5px;
+.one li:first-child{
+  transition: 0.35s;
 }
-.content1 ul li p{
-  font-family: 'Sunflower', sans-serif;
+.one li:nth-child(2){
+  width: 750px;
+  font-size: 4em;
+  color: #fff;
+  font-family: 'HSSummer';
+  opacity: 1;
 }
+.one li:nth-child(3){
+  opacity: 0;
+  color: #fff;
+  width: 900px;
+  margin: auto;
+  margin-right: 200px;
+  text-align: left;
+  font-family: 'SUITE-Regular';
+  line-height: 24px;
+}
+.content1 ul:first-of-type:hover{
+  border-radius: 10px 50% 50% 10px;
+}
+.one:hover li:first-child{
+  transform: translateX(1000px);
+}
+.one:hover li:nth-child(2){
+  opacity: 1;
+}
+.one:hover li:nth-child(3){
+  opacity: 1;
+}
+
+
 .content1 ul:nth-of-type(2){
-  background: skyblue;
-  padding: 10px;
+  background: linear-gradient(to right, rgb(98, 171, 255), skyblue);
+  display: flex;
+  border-radius: 10px 50% 50% 10px;
+  transition: 0.35s;
 }
+.two li:nth-child(3) img{
+  transition: 0.35s;
+  padding-bottom: 50px;
+}
+.two li:nth-child(2){
+  width: 950px;
+  font-size: 4em;
+  color: #fff;
+  font-family: 'HSSummer';
+  opacity: 1;
+}
+.two li:nth-child(1){
+  opacity: 0;
+  color: #fff;
+  width: 700px;
+  margin: auto;
+  margin-left: 200px;
+  text-align: right;
+  font-family: 'SUITE-Regular';
+  line-height: 24px;
+}
+.content1 ul:nth-of-type(2):hover{
+  border-radius: 50% 10px 10px 50%;
+}
+.two:hover li:first-child{
+  opacity: 1;
+}
+.two:hover li:nth-child(2){
+  opacity: 1;
+}
+.two:hover li:nth-child(3){
+  transform: translateX(-1000px);
+}
+
 .content1 ul:nth-of-type(3){
-  background: greenyellow;
-  padding: 10px;
+  background: linear-gradient(to right, yellowgreen, rgb(118, 212, 110));
+  display: flex;
+  border-radius: 50% 10px 10px 50%;
+  transition: 0.35s;
 }
+.three li:first-child{
+  transition: 0.35s;
+}
+.three li:nth-child(2){
+  width: 750px;
+  font-size: 4em;
+  color: #fff;
+  font-family: 'HSSummer';
+  opacity: 1;
+}
+.three li:nth-child(3){
+  opacity: 0;
+  color: #fff;
+  width: 900px;
+  margin: auto;
+  margin-right: 200px;
+  text-align: left;
+  font-family: 'SUITE-Regular';
+  line-height: 24px;
+}
+.content1 ul:nth-of-type(3):hover{
+  border-radius: 10px 50% 50% 10px;
+}
+.three:hover li:first-child{
+  transform: translateX(1000px);
+}
+.three:hover li:nth-child(2){
+  opacity: 1;
+}
+.three:hover li:nth-child(3){
+  opacity: 1;
+}
+
 .content1 ul:nth-of-type(4){
-  background: rgb(242, 137, 252);
-  padding: 10px;
+  background: linear-gradient(to left, rgb(242, 137, 252), rgb(216, 89, 216));
+  display: flex;
+  border-radius: 10px 50% 50% 10px;
+  transition: 0.35s;
 }
+.four li:nth-child(3) img{
+  transition: 0.35s;
+  padding-bottom: 50px;
+}
+.four li:nth-child(2){
+  width: 950px;
+  font-size: 4em;
+  color: #fff;
+  font-family: 'HSSummer';
+  opacity: 1;
+}
+.four li:nth-child(1){
+  opacity: 0;
+  color: #fff;
+  width: 700px;
+  margin: auto;
+  margin-left: 200px;
+  text-align: right;
+  font-family: 'SUITE-Regular';
+  line-height: 24px;
+}
+.content1 ul:nth-of-type(4):hover{
+  border-radius: 50% 10px 10px 50%;
+}
+.four:hover li:first-child{
+  opacity: 1;
+}
+.four:hover li:nth-child(2){
+  opacity: 1;
+}
+.four:hover li:nth-child(3){
+  transform: translateX(-1000px);
+}
+
 /* 푸터 */
 .footer{
   background-color: rgb(126, 12, 126);
@@ -353,7 +498,10 @@ address{
   .wrapBox{
     display: flex;
     flex-direction: column;
-  }
+    width: 100%;
+    max-width: 1199px;
+    }
+  
   .fourcut{
     width: 100%;
     max-width: 1199px;
@@ -561,7 +709,7 @@ address{
   /* border: 1px solid red; */
   position: fixed;
   top: 80px;
-  right: 0;
+  right: 0px;
   width: 30px;
   height: 20px;
   cursor: pointer;
@@ -645,6 +793,179 @@ address{
   max-width: 767px;
   height: 500px;
 }
+.content1 ul{
+  border-radius: 10px;
+  text-transform: capitalize;
+  font-family: 'Sunflower', sans-serif;
+  font-weight: 500;
+  max-width: 767px;
+  width: 100%;
+  height: 100px;
+  text-align: center;
+  padding: 10px;
+}
+.content1 ul:first-of-type{
+  background: linear-gradient(to right, orange, rgb(255, 111, 55));
+  display: flex;
+  border-radius: 50% 10px 10px 50%;
+  transition: 0.35s;
+}
+.one li:first-child{
+  transition: 0.35s;
+}
+.one li:nth-child(2){
+  width: 750px;
+  font-size: 2.5em;
+  color: #fff;
+  font-family: 'HSSummer';
+  opacity: 1;
+  line-height: 2.8em;
+}
+.one li:nth-child(3){
+  opacity: 0;
+  color: #fff;
+  width: 700px;
+  margin: auto;
+  margin-right: 180px;
+  text-align: left;
+  font-family: 'SUITE-Regular';
+  line-height: 24px;
+  font-size: 1em;
+}
+.content1 ul:first-of-type:hover{
+  border-radius: 10px 50% 50% 10px;
+}
+.one:hover li:first-child{
+  transform: translateX(600px);
+}
+.one:hover li:nth-child(2){
+  opacity: 1;
+}
+.one:hover li:nth-child(3){
+  opacity: 1;
+}
+.content1 ul:nth-of-type(2){
+  background: linear-gradient(to right, rgb(98, 171, 255), skyblue);
+  display: flex;
+  border-radius: 10px 50% 50% 10px;
+  transition: 0.35s;
+}
+.two li:nth-child(3) img{
+  transition: 0.35s;
+  padding-bottom: 50px;
+}
+.two li:nth-child(2){
+  width: 950px;
+  color: #fff;
+  font-family: 'HSSummer';
+  opacity: 1;
+  font-size: 2.5em;
+  overflow: hidden;
+}
+.two li:nth-child(1){
+  opacity: 0;
+  color: #fff;
+  width: 700px;
+  margin: auto;
+  margin-left: 200px;
+  text-align: right;
+  font-family: 'SUITE-Regular';
+  line-height: 24px;
+}
+.content1 ul:nth-of-type(2):hover{
+  border-radius: 50% 10px 10px 50%;
+}
+.two:hover li:first-child{
+  opacity: 1;
+}
+.two:hover li:nth-child(2){
+  opacity: 1;
+}
+.two:hover li:nth-child(3){
+  transform: translateX(-600px);
+}
+
+.content1 ul:nth-of-type(3){
+  background: linear-gradient(to right, yellowgreen, rgb(118, 212, 110));
+  display: flex;
+  border-radius: 50% 10px 10px 50%;
+  transition: 0.35s;
+}
+.three li:first-child{
+  transition: 0.35s;
+}
+.three li:nth-child(2){
+  width: 750px;
+  font-size: 2.5em;
+  color: #fff;
+  font-family: 'HSSummer';
+  opacity: 1;
+  overflow: hidden;
+}
+.three li:nth-child(3){
+  opacity: 0;
+  color: #fff;
+  width: 900px;
+  margin: auto;
+  margin-right: 200px;
+  text-align: left;
+  font-family: 'SUITE-Regular';
+  line-height: 24px;
+}
+.content1 ul:nth-of-type(3):hover{
+  border-radius: 10px 50% 50% 10px;
+}
+.three:hover li:first-child{
+  transform: translateX(0px);
+}
+.three:hover li:nth-child(2){
+  opacity: 1;
+}
+.three:hover li:nth-child(3){
+  opacity: 1;
+}
+
+.content1 ul:nth-of-type(4){
+  background: linear-gradient(to left, rgb(242, 137, 252), rgb(216, 89, 216));
+  display: flex;
+  border-radius: 10px 50% 50% 10px;
+  transition: 0.35s;
+}
+.four li:nth-child(3) img{
+  transition: 0.35s;
+  padding-bottom: 50px;
+}
+.four li:nth-child(2){
+  width: 950px;
+  font-size: 2.5em;
+  color: #fff;
+  font-family: 'HSSummer';
+  opacity: 1;
+  margin-left: 20px;
+}
+.four li:nth-child(1){
+  opacity: 0;
+  color: #fff;
+  width: 700px;
+  margin: auto;
+  margin-left: 200px;
+  text-align: right;
+  font-family: 'SUITE-Regular';
+  line-height: 24px;
+}
+.content1 ul:nth-of-type(4):hover{
+  border-radius: 50% 10px 10px 50%;
+}
+.four:hover li:first-child{
+  opacity: 1;
+}
+.four:hover li:nth-child(2){
+  opacity: 1;
+}
+.four:hover li:nth-child(3){
+  transform: translateX(-550px);
+}
+
 .footer{
   width: 100%;
   max-width: 767px;
